Bug 284297 - Button enabling problem in cookie policy selection dialog
Summary: Button enabling problem in cookie policy selection dialog
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kcookiejar (other bugs)
Version First Reported In: Git
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-17 19:22 UTC by Gregorio Guidi
Modified: 2011-10-18 04:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments
Fix button enabling in cookie policy selection dialog (1.21 KB, patch)
2011-10-17 19:22 UTC, Gregorio Guidi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gregorio Guidi 2011-10-17 19:22:26 UTC
Created attachment 64644 [details]
Fix button enabling in cookie policy selection dialog

Version:           Git (using Devel) 
OS:                Linux

In "Configure konqueror" -> cookies -> site policy, when clicking "Change...", the dialog to change policy shows up with the "Ok" button disabled, so just changing policy and cliking Ok is not possible.

This happens because in the dialog constructor the text is set up using setText(), which does not emit textEdited and so does not trigger the enabling of the OK button. This is fixed by listening to the signal textChanged instead of textEdited:

diff --git a/konqueror/settings/kio/kcookiespolicyselectiondlg.cpp b/konqueror/settings/kio/kcookiespolicyselectiondlg.cpp
index 584cb1f..0a2e9bb 100644
--- a/konqueror/settings/kio/kcookiespolicyselectiondlg.cpp
+++ b/konqueror/settings/kio/kcookiespolicyselectiondlg.cpp
@@ -67,7 +67,7 @@ KCookiesPolicySelectionDlg::KCookiesPolicySelectionDlg (QWidget* parent, Qt::Win
     mUi.cbPolicy->setMinimumWidth(mUi.cbPolicy->fontMetrics().maxWidth() * 15);
 
     enableButtonOk(false);
-    connect(mUi.leDomain, SIGNAL(textEdited(QString)),
+    connect(mUi.leDomain, SIGNAL(textChanged(QString)),
             SLOT(slotTextChanged (QString)));
 
     mUi.leDomain->setFocus();
-- 


Reproducible: Always

Steps to Reproduce:
"Configure konqueror" -> cookies -> site policy -> "Change..."

Actual Results:  
"Ok" button disabled

Expected Results:  
"Ok" button enabled
Comment 1 Dawit Alemayehu 2011-10-18 04:56:23 UTC
Git commit ef882275a2dba6f9831cb0adc3e78fb359a2bc06 by Dawit Alemayehu.
Committed on 18/10/2011 at 06:54.
Pushed by adawit into branch 'KDE/4.7'.

Enable the OK button when a new policy is selected.

BUG: 284297
FIXED-IN: 4.7.3

M  +7    -3    konqueror/settings/kio/policydlg.cpp

http://commits.kde.org/kde-baseapps/ef882275a2dba6f9831cb0adc3e78fb359a2bc06
Comment 2 Dawit Alemayehu 2011-10-18 04:57:17 UTC
Git commit fc0d9e485a55fb53a4a351979d0184497dc0122b by Dawit Alemayehu.
Committed on 18/10/2011 at 06:45.
Pushed by adawit into branch 'master'.

Enable the OK button when a new policy is selected.

CCBUG: 284297

M  +7    -2    konqueror/settings/kio/kcookiespolicyselectiondlg.cpp

http://commits.kde.org/kde-baseapps/fc0d9e485a55fb53a4a351979d0184497dc0122b