Enable the OK button when a new policy is selected.

BUG: 284297
FIXED-IN: 4.7.3